# Slipper

./: .gitignore  README.md  Slipper.l  analyse_test  csv_test.py  environment.yml  example.sh  pyproject.toml  slipper.py  tags
Slipper/: slipper.py
Slipper/modules/: analyse.py  cli.py  plot.py  typer.py
docs/: html.html  index.html  modules.html  search.js  slipper.html
docs/modules/: analyse.html  cli.html  extract.html  plot.html
modules/: analyse.py  cli.py  extract.py  plot.py
test_01/: raport.md
